# Code-Agent

./: .gitignore  README.md  agent.py  file_operations.py  main.py  pyproject.toml
coding_agent/: __init__.py
coding_agent/actions/: file_actions.py
coding_agent/cli/: commands.py
coding_agent/config/: __init__.py  events.py  manager.py
coding_agent/config/settings/: __init__.py  base.py  development.py  environment.py  local.py  production.py  staging.py
coding_agent/core/: initialization.py  model_manager.py  model_service.py  reasoning.py  types.py
coding_agent/utils/: file_operations.py  llm_logging.py  logging.py  model_utils.py
coding_agent/workflow/: graph.py
