[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.23",
    "langchain-openai>=0.3.14",
    "langchain-anthropic>=0.1.6", # For Claude models
    "langchain-google-genai>=0.1.1", # For Google Gemini models
    "langgraph>=0.3.31",
    "pydantic-settings>=2.9.1",
    "python-decouple>=3.8",
    "loguru>=0.7.0", # For advanced logging capabilities
]
